[project]
name = "haml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Neal Morton", email = "mortonne@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
]

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"
