[project]
name = "hamltools"
version = "0.2.2"
description = "Core utilities for the Human and Machine Learning lab."
readme = "README.md"
authors = [
    { name = "Neal Morton", email = "mortonne@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
]

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"
